# Pong

./: .gitignore  CMakeLists.txt  Makefile  README.md
Libraries/: main.cpp
Libraries/Shaders/: default.frag  default.vert
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
